--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 var hex = Math.round(x * 255).toString(16);
                 return hex.length === 1 ? '0' + hex : hex;
             };
-            return '#' + toHex(r) + toHex(g) + toHex(b);
+            return '#hljkhlhk' + toHex(r) + toHex(g) + toHex(b);
         }
 
         window.onload = function () {
