--- a/index.html
+++ b/index.html
@@ -1,133 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>#000000</title>
-    <link type="image/x-icon" rel="shortcut icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAHklEQVQ4T2NkYGD4z0ABYBw1gGE0DBhGw4BhWIQBAE5OEAELnjVHAAAAAElFTkSuQmCC">
-    <style>
-        :root {
-            --color: #000000;
-            --color-transparent: #00000022;
-        }
+  <meta charset="utf-8">
+  <title>HTML5 Example Page</title>
 
-        ::selection {
-            background: var(--color-transparent);
-        }
-
-        html,
-        body {
-            background: var(--color);
-            height: 100%;
-            margin: 0;
-        }
-
-        body {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-        }
-
-        #color {
-            background: white;
-            color: var(--color);
-            font-size: 2.5rem;
-            font-weight: 300;
-            padding: 2.25rem 3rem;
-            font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial, sans-serif;
-            cursor: text;
-        }
-    </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="HTML5 Example Page">
+  <link rel="stylesheet" href="/assets/css/stylesheet.css?v=1">
 </head>
-
 <body>
-    <p id="color">#000000</p>
-    <script>
-        function randomInt(min, max) {
-            return Math.floor(Math.random() * (max - min + 1) + min);
-        }
+  <header>
+    <h1>HTML5 Example Page</h1>
+  </header>
 
-        function hslToHex(h, s, l) {
-            h /= 360;
-            s /= 100;
-            l /= 100;
-            var r = void 0,
-                g = void 0,
-                b = void 0;
-            if (s === 0) {
-                r = g = b = l; // achromatic
-            } else {
-                var hue2rgb = function hue2rgb(p, q, t) {
-                    if (t < 0) t += 1;
-                    if (t > 1) t -= 1;
-                    if (t < 1 / 6) return p + (q - p) * 6 * t;
-                    if (t < 1 / 2) return q;
-                    if (t < 2 / 3) return p + (q - p) * (2 / 3 - t) * 6;
-                    return p;
-                };
-                var q = l < 0.5 ? l * (1 + s) : l + s - l * s;
-                var p = 2 * l - q;
-                r = hue2rgb(p, q, h + 1 / 3);
-                g = hue2rgb(p, q, h);
-                b = hue2rgb(p, q, h - 1 / 3);
-            }
-            var toHex = function toHex(x) {
-                var hex = Math.round(x * 255).toString(16);
-                return hex.length === 1 ? '0' + hex : hex;
-            };
-            return '#hljkhlhk' + toHex(r) + toHex(g) + toHex(b);
-        }
+  <nav>
+    <ul>
+      <li><a href="">Home</a></li>
+      <li><a href="">About</a></li>
+      <li><a href="">Contact</a></li>
+    </ul>
+  </nav>
 
-        window.onload = function () {
-            let stopProp = function (ev) {
-                ev.stopPropagation();
-            }
+  <article>
+    <h2>This is a headline</h2>
+    <p>
+      This paragraph is nested inside an article. It contains basic tags like <a href="#top">anchors</a>,
+      <strong>strong</strong>, <em>emphasis</em>, and <u>underline</u>.
+      It provides <del>deleted text</del> as well, which often gets replaced with <ins>inserted</ins> text.
+    </p>
 
-            var colorElement = document.getElementById("color");
-            colorElement.addEventListener("click", stopProp, false);
-            colorElement.addEventListener("mousedown", stopProp, false);
+    <h3>This is subheadline for more content</h3>
+    <ul>
+      <li>Unordered lists have basic styles</li>
+      <li>They use the circle list style
+        <ul>
+          <li>Nested list item one</li>
+          <li>Nested list item two</li>
+        </ul>
+      </li>
+      <li>Just one more list item</li>
+    </ul>
+    <ol>
+      <li>Ordered lists also have basic styles</li>
+      <li>They use the decimal list style
+        <ul>
+          <li>Nested list item one</li>
+          <li>Nested list item two</li>
+        </ul>
+      </li>
+      <li>Last list item</li>
+    </ol>
+  </article>
 
-            var setFavicon = function (hex) {
-                var canvas = document.createElement('canvas');
-                canvas.width = 16;
-                canvas.height = 16;
-                var ctx = canvas.getContext('2d');
-                ctx.fillStyle = hex;
-                ctx.fillRect(0, 0, 16, 16);
-                document.getElementsByTagName('link')[0].href = canvas.toDataURL("image/x-icon");
-            }
+  <aside>
+    <h3>This is some advanced content</h3>
+    <figure>
+      <img data-src="/assets/images/image.png"
+           src="data:image/gif;base64,R0lGODlhAQABAIAAAMLCwgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+           width="360" height="120" alt="Description of the first image"/>
+      <figcaption>Caption for the first image</figcaption>
+    </figure>
 
-            var setRandomColor = function setRandomColor() {
-                var h = void 0,
-                    s = void 0,
-                    l = void 0;
+    <a href="#top">
+      <figure>
+        <img data-src="/assets/images/image2.png"
+             src="data:image/gif;base64,R0lGODlhAQABAIAAAAUEBAAAACwAAAAAAQABAAACAkQBADs="
+             width="360" height="80" alt="Description of the second image"/>
+        <figcaption>Caption for the second image</figcaption>
+      </figure>
+    </a>
 
-                h = randomInt(0, 359);
-                s = randomInt(55, 75);
-                l = randomInt(40, 60);
+    <img alt="Description of a single image without a caption" src="/assets/images/image.webp"/>
 
-                document.documentElement.style.setProperty('--color', 'hsl(' + h + ', ' + s + '%, ' + l + '%)');
-                var hex = hslToHex(h, s, l);
-                document.title = hex;
-                colorElement.innerHTML = hex;
-                document.documentElement.style.setProperty('--color-transparent', hex + '22');
+    <p>
+      <a class="button" href="#">Anchor button</a><br>
+      <button>Button element</button>
+    </p>
 
-                setFavicon(hex);
-            };
-            setRandomColor();
+    <blockquote>
+      “Infamous quote”
+      <footer><cite>- Attribution</cite></footer>
+    </blockquote>
 
-            var body = document.getElementsByTagName("body")[0];
-            body.addEventListener("mousedown", function (ev) {
-                ev.preventDefault();
-            });
-            body.addEventListener("click", function () {
-                setRandomColor();
-            }, false);
-        };
-    </script>
+    <hr>
+
+    <details>
+      <summary>Expandable title</summary>
+      <p>Revealed content</p>
+    </details>
+    <details>
+      <summary>Another expandable title</summary>
+      <p>More revealed content</p>
+    </details>
+
+    <h4>This is a code example</h4>
+    <pre><code>.some-class {
+  background-color: red;
+}</code></pre>
+  </aside>
+
+  <section>
+    <h2>This is another headline</h2>
+    <div class="some-class">
+      This is a boxed element.
+    </div>
+    <div class="some-class">
+      This is yet another boxed element.
+    </div>
+
+    <h3>This is a table</h3>
+    <table>
+      <thead>
+      <tr>
+        <th>Name</th>
+        <th>Quantity</th>
+        <th>Price</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>Cheese fondue</td>
+        <td>1</td>
+        <td>EUR 23</td>
+      </tr>
+      <tr>
+        <td>Pizza</td>
+        <td>10</td>
+        <td>EUR 10.000,00</td>
+      </tr>
+      <tr>
+        <td>Waffles</td>
+        <td>1</td>
+        <td>EUR 14,30</td>
+      </tr>
+      </tbody>
+    </table>
+
+    <h3>And this is a form</h3>
+    <form>
+      <div class="row">
+        <label for="exampleSubject">Subject</label>
+        <input type="text" placeholder="Your subject" id="exampleSubject">
+      </div>
+      <div class="row">
+        <label for="exampleMessage">Message</label>
+        <textarea placeholder="Your message" id="exampleMessage"></textarea>
+      </div>
+      <div class="row">
+        <label>
+          <input type="checkbox" id="exampleConfirmation"><span>Confirmation</span>
+        </label>
+      </div>
+      <input type="submit" value="Submit">
+    </form>
+  </section>
+
+  <footer>
+    Made with <a href="https://html5example.com">html5example.com</a>
+  </footer>
+
+  <script src="/assets/js/scripts.js"></script>
 </body>
-
 </html>
